變更 索引字詞

--- a/house_price_clac.html
+++ b/house_price_clac.html
@@ -27,8 +27,8 @@
     屋齡區段:
     <select id="ageCategory">
       <option value="1.0">預售屋（100%）</option>
-      <option value="0.9">五年內新屋（90%）</option>
-      <option value="0.8">十幾年成屋（80%）</option>
+      <option value="0.9">10年內新屋（90%）</option>
+      <option value="0.8">10-20年屋（80%）</option>
       <option value="0.7">20-30年屋（70%）</option>
       <option value="0.6">40-50年屋（60%）</option>
     </select>
@@ -42,7 +42,7 @@
     const factors = {
       '預售屋（100%）': 1.0,
       '10年內新屋（90%）': 0.9,
-      '10-2年成屋（80%）': 0.8,
+      '10-20年屋（80%）': 0.8,
       '20-30年屋（70%）': 0.7,
       '40-50年屋（60%）': 0.6
     };
