--- a/house_price_clac.html
+++ b/house_price_clac.html
@@ -5,64 +5,82 @@
   <title>房價折算試算工具</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+  body {
+    font-family: sans-serif;
+    padding: 2em;
+    background: #f8f9fa;
+    max-width: 600px;
+    margin: auto;
+  }
+  h1 {
+    font-size: 1.8em;
+    text-align: center;
+  }
+  label, select, input, button {
+    display: block;
+    width: 100%;
+    margin: 1em 0;
+    font-size: 1.1em;
+  }
+  input, select {
+    padding: 0.5em;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  button {
+    padding: 0.75em;
+    font-size: 1.1em;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  button:hover {
+    background-color: #0056b3;
+  }
+  .result {
+    margin-top: 2em;
+    font-weight: bold;
+    font-size: 1.2em;
+  }
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 1em;
+  }
+  th, td {
+    border: 1px solid #ccc;
+    padding: 0.5em;
+    text-align: center;
+  }
+  .download-btn {
+    background-color: #28a745;
+    margin-top: 1em;
+  }
+  .download-btn:hover {
+    background-color: #1e7e34;
+  }
+
+  /* 響應式設計：針對手機小螢幕 */
+  @media (max-width: 480px) {
     body {
-      font-family: sans-serif;
-      padding: 2em;
-      background: #f8f9fa;
-      max-width: 600px;
-      margin: auto;
-    }
-    h1 {
-      font-size: 1.8em;
-      text-align: center;
+      padding: 1em;
+      font-size: 1em;
     }
     label, select, input, button {
-      display: block;
-      width: 100%;
-      margin: 1em 0;
-      font-size: 1.1em;
+      font-size: 1em;
     }
-    input, select {
-      padding: 0.5em;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-    }
-    button {
-      padding: 0.75em;
-      font-size: 1.1em;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #0056b3;
+    h1 {
+      font-size: 1.4em;
     }
     .result {
-      margin-top: 2em;
-      font-weight: bold;
-      font-size: 1.2em;
+      font-size: 1em;
     }
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      margin-top: 1em;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 0.5em;
-      text-align: center;
-    }
-    .download-btn {
-      background-color: #28a745;
-      margin-top: 1em;
-    }
-    .download-btn:hover {
-      background-color: #1e7e34;
-    }
-  </style>
+  }
+</style>
+
 </head>
 <body>
   <h1>房價折算試算工具</h1>
