--- a/index.html
+++ b/index.html
@@ -216,25 +216,41 @@
             <span class="tag">月複利</span>
           </div>
         </a>
+
+        <a href="investment_profit_calculator.html" class="tool-card">
+          <div class="tool-icon">📈</div>
+          <div class="tool-title">投資獲利率計算工具</div>
+          <div class="tool-description">追蹤多個投資項目的獲利表現，計算總獲利率與收益。</div>
+          <ul class="tool-features">
+            <li>多項目管理</li>
+            <li>獲利率計算</li>
+            <li>盈虧分析</li>
+            <li>投資組合追蹤</li>
+          </ul>
+          <div>
+            <span class="tag">獲利計算</span>
+            <span class="tag">多項目</span>
+          </div>
+        </a>
       </div>
     </div>
 
     <div class="category">
       <h2 class="category-title">🏠 房地產工具</h2>
       <div class="tools-grid">
-        <a href="house_price_calc_updated.html" class="tool-card">
+        <a href="house_price_clac.html" class="tool-card">
           <div class="tool-icon">🏘️</div>
           <div class="tool-title">房價折算試算工具</div>
-          <div class="tool-description">依據屋齡、坪數反推不同條件下的房價是否合理。</div>
+          <div class="tool-description">輸入房屋總價與坪數，反推不同屋齡下的合理單坪價格。</div>
           <ul class="tool-features">
             <li>屋齡折舊計算</li>
-            <li>單坪價格分析</li>
-            <li>地區價格參考</li>
-            <li>房貸月付試算</li>
+            <li>反推單坪價格</li>
+            <li>多種屋齡對照</li>
+            <li>CSV 結果下載</li>
           </ul>
           <div>
-            <span class="tag">房價評估</span>
-            <span class="tag">貸款試算</span>
+            <span class="tag">房價折算</span>
+            <span class="tag">快速試算</span>
           </div>
         </a>
       </div>
