修改及統一樣式

--- a/interest_calculator.html
+++ b/interest_calculator.html
@@ -4,165 +4,71 @@
   <meta charset="UTF-8">
   <title>利率計算工具</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      font-family: sans-serif;
-      padding: 2em;
-      background: #f8f9fa;
-      max-width: 800px;
-      margin: auto;
-    }
-    h1 {
-      font-size: 1.8em;
-      text-align: center;
-      color: #333;
-    }
-    .input-group {
-      background: white;
-      padding: 2em;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      margin-bottom: 2em;
-    }
-    label {
-      display: block;
-      margin: 1em 0 0.5em 0;
-      font-weight: bold;
-      color: #555;
-    }
-    input {
-      width: 100%;
-      padding: 0.75em;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-      font-size: 1em;
-    }
-    button {
-      width: 100%;
-      padding: 1em;
-      font-size: 1.1em;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      margin-top: 1.5em;
-    }
-    button:hover {
-      background-color: #0056b3;
-    }
-    .result {
-      background: white;
-      padding: 2em;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      margin-top: 2em;
-    }
-    .summary {
-      background: #e7f3ff;
-      padding: 1.5em;
-      border-radius: 4px;
-      margin-bottom: 2em;
-      border-left: 4px solid #007bff;
-    }
-    .summary-item {
-      display: flex;
-      justify-content: space-between;
-      margin: 0.5em 0;
-      font-size: 1.1em;
-    }
-    .summary-item .label {
-      color: #555;
-    }
-    .summary-item .value {
-      font-weight: bold;
-      color: #007bff;
-    }
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      margin-top: 1em;
-    }
-    th, td {
-      border: 1px solid #ddd;
-      padding: 0.75em;
-      text-align: center;
-    }
-    th {
-      background-color: #007bff;
-      color: white;
-      font-weight: bold;
-    }
-    tr:nth-child(even) {
-      background-color: #f8f9fa;
-    }
-    tr:hover {
-      background-color: #e9ecef;
-    }
-    .download-btn {
-      background-color: #28a745;
-      margin-top: 1em;
-    }
-    .download-btn:hover {
-      background-color: #1e7e34;
-    }
+  <link rel="stylesheet" href="common-styles.css">
+    <style>
+    /* 頁面特定樣式 */
     .hidden {
       display: none;
+    }
+    
+    th, td {
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <h1>💰 利率計算工具</h1>
+  <div class="container">
+    <h1>💰 利率計算工具</h1>
 
-  <div class="input-group">
-    <label>
-      本金（元）:
-      <input type="number" id="principal" placeholder="例如：100000" value="100000">
-    </label>
+    <div class="input-group">
+      <label>
+        本金（元）:
+        <input type="number" id="principal" placeholder="例如：100000" value="100000">
+      </label>
 
-    <label>
-      年利率（%）:
-      <input type="number" id="interestRate" placeholder="例如：3.5" value="3.5" step="0.1">
-    </label>
+      <label>
+        年利率（%）:
+        <input type="number" id="interestRate" placeholder="例如：3.5" value="3.5" step="0.1">
+      </label>
 
-    <label>
-      投資年數:
-      <input type="number" id="years" placeholder="例如：10" value="10">
-    </label>
+      <label>
+        投資年數:
+        <input type="number" id="years" placeholder="例如：10" value="10">
+      </label>
 
-    <button onclick="calculate()">計算收益</button>
-    <button class="download-btn hidden" id="downloadBtn" onclick="downloadCSV()">下載結果（CSV）</button>
-  </div>
-
-  <div class="result hidden" id="result">
-    <div class="summary">
-      <h2 style="margin-top: 0;">📊 總覽</h2>
-      <div class="summary-item">
-        <span class="label">初始本金：</span>
-        <span class="value" id="summaryPrincipal">-</span>
-      </div>
-      <div class="summary-item">
-        <span class="label">年利率：</span>
-        <span class="value" id="summaryRate">-</span>
-      </div>
-      <div class="summary-item">
-        <span class="label">投資年數：</span>
-        <span class="value" id="summaryYears">-</span>
-      </div>
-      <div class="summary-item">
-        <span class="label">總收益：</span>
-        <span class="value" id="summaryProfit" style="color: #28a745; font-size: 1.3em;">-</span>
-      </div>
-      <div class="summary-item">
-        <span class="label">最終金額：</span>
-        <span class="value" id="summaryFinal" style="color: #dc3545; font-size: 1.3em;">-</span>
+      <div class="button-group">
+        <button class="btn-primary" onclick="calculate()">計算收益</button>
+        <button class="btn-secondary hidden" id="downloadBtn" onclick="downloadCSV()">下載結果（CSV）</button>
       </div>
     </div>
 
-    <h2>📈 每年詳細收益</h2>
-    <div style="overflow-x: auto;">
-      <table id="resultTable">
+    <div class="hidden" id="result">
+      <div class="summary">
+        <div class="summary-item">
+          <div class="label">初始本金</div>
+          <div class="value" id="summaryPrincipal">-</div>
+        </div>
+        <div class="summary-item">
+          <div class="label">年利率</div>
+          <div class="value" id="summaryRate">-</div>
+        </div>
+        <div class="summary-item">
+          <div class="label">投資年數</div>
+          <div class="value" id="summaryYears">-</div>
+        </div>
+        <div class="summary-item">
+          <div class="label">總收益</div>
+          <div class="value text-success" id="summaryProfit">-</div>
+        </div>
+        <div class="summary-item">
+          <div class="label">最終金額</div>
+          <div class="value" id="summaryFinal">-</div>
+        </div>
+      </div>
+
+      <div class="result-section">
+        <h2>📈 每年詳細收益</h2>
+        <table id="resultTable">
         <thead>
           <tr>
             <th>年份</th>
@@ -172,9 +78,10 @@
             <th>累計收益（元）</th>
           </tr>
         </thead>
-        <tbody id="resultBody">
-        </tbody>
-      </table>
+          <tbody id="resultBody">
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 
