新增房貸試算工具

--- a/index.html
+++ b/index.html
@@ -238,6 +238,22 @@
     <div class="category">
       <h2 class="category-title">🏠 房地產工具</h2>
       <div class="tools-grid">
+        <a href="mortgage_calculator.html" class="tool-card">
+          <div class="tool-icon">🏠</div>
+          <div class="tool-title">房貸試算工具</div>
+          <div class="tool-description">試算房屋貸款，支援單一利率或分段利率，以及不同的還款方式。</div>
+          <ul class="tool-features">
+            <li>本息/本金平均攤還</li>
+            <li>單一或分段利率</li>
+            <li>完整還款明細表</li>
+            <li>總利息計算</li>
+          </ul>
+          <div>
+            <span class="tag">房貸試算</span>
+            <span class="tag">分段利率</span>
+          </div>
+        </a>
+
         <a href="house_price_clac.html" class="tool-card">
           <div class="tool-icon">🏘️</div>
           <div class="tool-title">房價折算試算工具</div>
