新增退休金計算工具

--- a/index.html
+++ b/index.html
@@ -232,6 +232,22 @@
             <span class="tag">多項目</span>
           </div>
         </a>
+
+        <a href="retirement_calculator.html" class="tool-card">
+          <div class="tool-icon">🌴</div>
+          <div class="tool-title">退休生活費計算工具</div>
+          <div class="tool-description">計算退休所需資金，考慮通貨膨脹因素，規劃安穩的退休生活。</div>
+          <ul class="tool-features">
+            <li>通膨因素計算</li>
+            <li>逐年生活費明細</li>
+            <li>每月儲蓄建議</li>
+            <li>理財策略分析</li>
+          </ul>
+          <div>
+            <span class="tag">退休規劃</span>
+            <span class="tag">通膨計算</span>
+          </div>
+        </a>
       </div>
     </div>
 
