新增消費性貸款試算工具

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     </div>
 
     <div class="category">
-      <h2 class="category-title">🏠 房地產工具</h2>
+      <h2 class="category-title">🏠 房地產與貸款工具</h2>
       <div class="tools-grid">
         <a href="mortgage_calculator.html" class="tool-card">
           <div class="tool-icon">🏠</div>
@@ -267,6 +267,22 @@
           <div>
             <span class="tag">房貸試算</span>
             <span class="tag">分段利率</span>
+          </div>
+        </a>
+
+        <a href="consumer_loan_calculator.html" class="tool-card">
+          <div class="tool-icon">💳</div>
+          <div class="tool-title">消費性貸款計算工具</div>
+          <div class="tool-description">試算消費性貸款的每月還款金額、總利息與總還款金額。</div>
+          <ul class="tool-features">
+            <li>每月應繳金額</li>
+            <li>本息平均攤還</li>
+            <li>完整還款明細表</li>
+            <li>利息佔比分析</li>
+          </ul>
+          <div>
+            <span class="tag">消費貸款</span>
+            <span class="tag">快速試算</span>
           </div>
         </a>
 
