--- a/index.html
+++ b/index.html
@@ -248,6 +248,22 @@
             <span class="tag">通膨計算</span>
           </div>
         </a>
+
+        <a href="financial_freedom_calculator.html" class="tool-card">
+          <div class="tool-icon">💰</div>
+          <div class="tool-title">財富自由計算器</div>
+          <div class="tool-description">計算達到財富自由所需資產，讓被動收入支應生活開銷。</div>
+          <ul class="tool-features">
+            <li>被動收入計算</li>
+            <li>實質報酬率分析</li>
+            <li>資產成長路徑</li>
+            <li>達成策略建議</li>
+          </ul>
+          <div>
+            <span class="tag">財富自由</span>
+            <span class="tag">被動收入</span>
+          </div>
+        </a>
       </div>
     </div>
 
