--- a/mortgage_calculator.html
+++ b/mortgage_calculator.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>房貸試算工具</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/svg+xml" href="icon.svg">
   <link rel="stylesheet" href="common-styles.css">
   <style>
     /* 頁面特定樣式 */
