--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>計算工具集 - CaleTool</title>
+  <title>計算工具集 - CalcTool</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="icon.svg">
   <style>
@@ -142,7 +142,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>🧮 CaleTool 計算工具集</h1>
+      <h1>🧮 CalcTool 計算工具集</h1>
       <p class="subtitle">各種實用的線上計算工具，完全免費使用</p>
     </header>
 
@@ -324,10 +324,10 @@
     <footer>
       <p>💻 Made with ❤️ by <a href="https://github.com/ytssamuel" target="_blank">ytssamuel</a></p>
       <p style="margin-top: 1em; font-size: 0.9em; opacity: 0.9;">
-        <a href="https://github.com/ytssamuel/CaleTool" target="_blank">📦 View on GitHub</a>
+        <a href="https://github.com/ytssamuel/CalcTool" target="_blank">📦 View on GitHub</a>
       </p>
       <p style="margin-top: 0.5em; font-size: 0.85em; opacity: 0.8;">
-        © 2025 CaleTool - 所有工具完全免費使用
+        © 2025 CalcTool - 所有工具完全免費使用
       </p>
     </footer>
   </div>
