新增 預設數值

--- a/house_price_clac.html
+++ b/house_price_clac.html
@@ -35,12 +35,12 @@
     <div class="input-group">
       <label>
         房屋總價（萬元）:
-        <input type="number" id="totalPrice" placeholder="例如：2400">
+        <input type="number" id="totalPrice" placeholder="例如：2400" value="2400">
       </label>
 
       <label>
         坪數:
-        <input type="number" id="totalPings" placeholder="例如：30">
+        <input type="number" id="totalPings" placeholder="例如：30" value="30">
       </label>
 
       <label>
