新增 勞保及公保計算功能

--- a/index.html
+++ b/index.html
@@ -233,7 +233,12 @@
             <span class="tag">多項目</span>
           </div>
         </a>
+      </div>
+    </div>
 
+    <div class="category">
+      <h2 class="category-title">🌴 退休規劃工具</h2>
+      <div class="tools-grid">
         <a href="retirement_calculator.html" class="tool-card">
           <div class="tool-icon">🌴</div>
           <div class="tool-title">退休生活費計算工具</div>
@@ -263,6 +268,38 @@
           <div>
             <span class="tag">財富自由</span>
             <span class="tag">被動收入</span>
+          </div>
+        </a>
+
+        <a href="labor_pension_calculator.html" class="tool-card">
+          <div class="tool-icon">💼</div>
+          <div class="tool-title">勞保退休金試算工具</div>
+          <div class="tool-description">根據台灣勞保制度，試算一次請領或年金給付金額。</div>
+          <ul class="tool-features">
+            <li>一次請領試算</li>
+            <li>年金給付試算</li>
+            <li>年齡調整計算</li>
+            <li>終身總額預估</li>
+          </ul>
+          <div>
+            <span class="tag">勞保</span>
+            <span class="tag">退休金</span>
+          </div>
+        </a>
+
+        <a href="civil_service_pension_calculator.html" class="tool-card">
+          <div class="tool-icon">🏛️</div>
+          <div class="tool-title">公保退休金試算工具</div>
+          <div class="tool-description">根據台灣公務人員保險制度，試算養老給付金額。</div>
+          <ul class="tool-features">
+            <li>一次養老給付</li>
+            <li>養老年金給付</li>
+            <li>年齡調整計算</li>
+            <li>終身總額預估</li>
+          </ul>
+          <div>
+            <span class="tag">公保</span>
+            <span class="tag">退休金</span>
           </div>
         </a>
       </div>
